--- a/pimpinan/jenis-dokumen.html
+++ b/pimpinan/jenis-dokumen.html
@@ -279,6 +279,34 @@
                                                         </td>
                                                     
                                                     </tr>
+
+                                                    <tr>
+                                                        <td>4</td>
+                                                        <td>NPWP</td>
+                                                      <td><a href=#>
+                                                                        <button type="button" class="btn-primary">Edit</button></a>
+                                                                        &nbsp
+                                                                        <a href=update-jenis-arsip.html>
+                                                                            <button type="button" class="btn-danger">Hapus</button></a></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>5</td>
+                                                        <td>TDP</td>
+                                                      <td><a href=update-jenis-arsip.html>
+                                                                        <button type="button" class="btn-primary">Edit</button></a>
+                                                                        &nbsp
+                                                                        <a href=#>
+                                                                            <button type="button" class="btn-danger">Hapus</button></a></td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>6</td>
+                                                        <td>CV</td>
+                                                      <td><a href=update-jenis-arsip.html>
+                                                                        <button type="button" class="btn-primary">Edit</button></a>
+                                                                        &nbsp
+                                                                        <a href=#>
+                                                                            <button type="button" class="btn-danger">Hapus</button></a></td>
+                                                    </tr>
                                                 
                                                 </tbody>
                                             </table>
