--- a/pimpinan/data-arsip-tdp.html
+++ b/pimpinan/data-arsip-tdp.html
@@ -241,7 +241,7 @@
                                     <div class="card-body">
                                         <div class="float-left">
                                             <p>
-                                            <a href=form-add-data-tdp.html>
+                                            <a href=form-add-data-dokumen.html>
                                                 <button type="button" class="btn btn-info btn-sm">Tambah Data</button></p>
                                             </a>
 
