--- a/resepsionis/dashboard.html
+++ b/resepsionis/dashboard.html
@@ -245,7 +245,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-md-12 col-xl-3">
+                                <div class="col-sm-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
                                             <i class="mdi mdi-email-open"></i>
@@ -256,7 +256,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-12 col-xl-3">
+                                <div class="col-sm-12 col-xl-3">
                                     <div class="card mini-stat">
                                         <div class="mini-stat-icon text-right">
                                             <i class="mdi mdi-file-document-box"></i>
@@ -267,6 +267,32 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="col-sm-12 col-xl-3">
+                                    <div class="card mini-stat">
+                                        <div class="mini-stat-icon text-right">
+                                            <i class="mdi mdi-email"></i>
+                                        </div>
+                                        <div class="p-4">
+                                            <h6 class="text-uppercase mb-3">Surat Masuk</h6>
+                                            <h6>Bulan Ini</h6>
+                                            <h4 class="mb-0">10<small class="ml-2"></small></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 col-xl-3">
+                                    <div class="card mini-stat">
+                                        <div class="mini-stat-icon text-right">
+                                            <i class="mdi mdi-email-open"></i>
+                                        </div>
+                                        <div class="p-4">
+                                            <h6 class="text-uppercase mb-3">Surat Keluar</h6>
+                                            <h6>Bulan Ini</h6>
+                                            <h4 class="mb-0">5<small class="ml-2"></small></h4>
+                                        </div>
+                                    </div>
+                                </div>
+                                </div>
+                                <div class="row">
                                 <div class="col-md-12 col-xl-8">
                                     <div class="card">
                                         <div class="card-body">   
@@ -275,7 +301,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                
+                                </div>
 
                                 </div>                                            
                             </div><!-- end row -->
