--- a/resepsionis/data-arsip-cv.html
+++ b/resepsionis/data-arsip-cv.html
@@ -256,6 +256,8 @@
                                                                     <th>Nama Arsip</th>
                                                                     <th>Jenis Arsip</th>
                                                                     <th>Tanggal Upload</th>
+                                                                    <th>Tanggal Disposisi</th>
+                                                                    <th>Status</th>
                                                                     <th>Aksi</th>
                                                                 </tr>
                                                             </thead>
@@ -266,6 +268,8 @@
                                                                     <td>CV CV Hummasoft</td>
                                                                     <td>CV</td>
                                                                     <td>14/10/2021</td>
+                                                                    <td>16/10/2021</td>
+                                                                    <td><font color="blue">Disposisikan</td></font>
                                                                     <td><a href=form-edit-data-cv.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
@@ -282,6 +286,8 @@
                                                                     <td>CV CV Hummasoft</td>
                                                                     <td>CV</td>
                                                                     <th>13/10/2021</th>
+                                                                    <td>15/10/2021</td>
+                                                                    <td><font color="blue">Disposisikan</td></font>
                                                                     <td><a href=form-edit-data-cv.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
@@ -297,7 +303,9 @@
                                                                     <td>3</td>
                                                                     <td>CV CV Hummasoft</td>
                                                                     <td>CV</td>
-                                                                    <th>10/10/2021</th>
+                                                                    <td>10/10/2021</td>
+                                                                    <td>12/10/2021</td>
+                                                                    <td><font color="blue">Disposisikan</td></font>
                                                                     <td><a href=form-edit-data-cv.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
