--- a/resepsionis/data-arsip-npwp.html
+++ b/resepsionis/data-arsip-npwp.html
@@ -256,6 +256,8 @@
                                                                     <th>Nama Arsip</th>
                                                                     <th>Jenis Arsip</th>
                                                                     <th>Tanggal Upload</th>
+                                                                    <th>Tanggal Disposisi</th>
+                                                                    <th>Status</th>
                                                                     <th>Aksi</th>
                                                                 </tr>
                                                             </thead>
@@ -266,6 +268,8 @@
                                                                     <td>NPWP CV Hummasoft</td>
                                                                     <td>NPWP</td>
                                                                     <td>14/10/2021</td>
+                                                                    <td>16/10/2021</td>
+                                                                    <td><font color="blue">Disposisikan</td></font>
                                                                     <td><a href=form-edit-data-npwp.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
@@ -283,7 +287,9 @@
                                                                     <td>2</td>
                                                                     <td>NPWP CV Hummasoft</td>
                                                                     <td>NPWP</td>
-                                                                    <th>13/10/2021</th>
+                                                                    <td>13/10/2021</td>
+                                                                    <td>15/10/2021</td>
+                                                                    <td><font color="blue">Disposisikan</td></font>
                                                                     <td><a href=form-edit-data-npwp.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
@@ -299,7 +305,9 @@
                                                                     <td>3</td>
                                                                     <td>NPWP CV Hummasoft</td>
                                                                     <td>NPWP</td>
-                                                                    <th>10/10/2021</th>
+                                                                    <td>10/10/2021</td>
+                                                                    <td>12/10/2021</td>
+                                                                    <td><font color="blue">Disposisikan</td></font>
                                                                     <td><a href=form-edit-data-npwp.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
