--- a/resepsionis/lihat-npwp.html
+++ b/resepsionis/lihat-npwp.html
@@ -238,8 +238,12 @@
                             <div class="col-12">
                                 <div class="card m-b-30">
                                     <div class="card-body">
+                                        <a href=data-arsip-npwp.html>
+                                            <i class="far fa-arrow-alt-circle-left fa-2x"></i>
+                                        </a>
                                         <div class="form-group row">
                                             <div class="col-sm-8">
+                                                <br>
                                                 <iframe src="contoh.pdf" width="1000" height="500"></iframe>
                                                 </div>
                                             </div>
@@ -248,19 +252,6 @@
                                                 </div>
                                                 <div class="col-sm-5">
                                                 </div>
-                                                <div class="col-md-10 offset-md-2">
-                                                    <div class="input-group mt-2">
-                                                        <div class="custom">
-                                                            <div class="input-group append">
-                                                                <a href="data-arsip-npwp.html">
-                                                                <button class="btn btn-danger btn-sm" type="button">Kembali</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                        <!-- <div class="input-group append">
-                                            <button class="btn btn-primary" type="button">Upload</button>
-                                            </div> -->
                                         </div>
                                                     </div>
                                     </div>
@@ -272,23 +263,6 @@
 
 
             </div><!-- container -->
-            <!-- <div class="col-md-10 offset-md-2">
-                <div class="input-group mt-2">
-                    <div class="custom">
-                    <div class="input-group-append">
-
-                    <a href=surat-masuk.html>
-                        <button class="btn btn-primary" type="button">Simpan</button></a>
-                    </div>
-                        
-                    </div> &nbsp &nbsp
-                    <div class="input-group-append">
-
-                    <a href=surat-masuk.html>
-                        <button class="btn btn-danger" type="button">Batal</button></a>
-                    </div>
-                </div>
-                </div> -->
             </div> <!-- end col -->
         </div> <!-- end row -->
 
