--- a/resepsionis/lihat-surat-masuk.html
+++ b/resepsionis/lihat-surat-masuk.html
@@ -239,6 +239,10 @@
                                 <div class="card ">
                                     <div class="card-body">
                                         <div class="float-left">
+                                            <a href=surat-masuk.html>
+                                                <i class="far fa-arrow-alt-circle-left fa-2x"></i>
+                                            </a>
+
                                                                                                     
                                                         <div class="card m-b-30 ">
                                                             <div class="card-body">
@@ -277,6 +281,18 @@
                                                     <input class="form-control" type="text" value="Perizinan lokasi PKL" id="example-text-input" disabled>
                                                 </div>
                                             </div>
+                                            <div class="form-group row">
+                                                <label for="example-text-input" class="col-sm-4 col-form-label">Tanggal Disposisi</label>
+                                                <div class="col-sm-8">
+                                                    <input class="form-control" type="text" value="5 Oktober 2021" id="example-text-input" disabled>
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <label for="example-text-input" class="col-sm-4 col-form-label">Status</label>
+                                                <div class="col-sm-8">
+                                                    <input class="form-control" type="text" value="Disposisikan" id="example-text-input" disabled>
+                                                </div>
+                                            </div>
 
                                                                 </div>
                                                             </div>
@@ -292,7 +308,7 @@
                                                             </div>
                                                         </div>                                                  
                                                     </div>
-
+                                                   <br>
                                                    <br>
                                                     <div class="col-md-12">
                                                         <div class="row">
@@ -308,18 +324,6 @@
                                                 </div>
                                                 <div class="col-sm-5">
                                             </div>
-                                                                <div class="col-md-10 offset-md-2">
-                                                            <div class="input-group mt-2">
-                                                                <div class="custom">
-                                                                <div class="input-group-append">
-
-                                                                <a href=surat-masuk.html>
-                                                                    <button class="btn btn-danger btn-sm" type="button">Kembali</button></a>
-                                                                </div>
-                                                                    
-                                                                </div>
-                                                            </div>
-                                                            </div>
                                                         </div>
                                                     </div>
                                     </div>
