--- a/resepsionis/surat-masuk.html
+++ b/resepsionis/surat-masuk.html
@@ -253,9 +253,9 @@
                                                                     <th>No</th>
                                                                     <th>No. Surat</th>
                                                                     <th>Tanggal Surat</th>
-                                                                    <th>Tanggal Terima</th>
                                                                     <th>Asal Surat</th>
-                                                                    <th>Perihal</th>
+                                                                    <th>Tanggal Disposisi</th>
+                                                                    <th>Status</th>
                                                                     <th>Aksi</th>
                                                                 </tr>
                                                             </thead>
@@ -265,9 +265,9 @@
                                                                     <td>1</td>
                                                                     <td>SR-121</td>
                                                                     <td>1 Oktober 2021</td>
-                                                                    <td>4 Oktober 2021</td>
                                                                     <td>Politeknik Negeri Jember</td>
-                                                                    <td>Perizinan lokasi PKL</td>
+                                                                    <td>5 Oktober 2021</td>
+                                                                    <td>Disposisikan</td>
                                                                     <td><a href=form-edit-surat-masuk.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
@@ -279,10 +279,10 @@
                                                                     
                                                                     <td>2</td>
                                                                     <td>SR-122</td>
-                                                                    <td>4 Oktober 2021</td>
-                                                                    <td>5 Oktober 2021</td>
+                                                                    <td>1 Oktober 2021</td>
                                                                     <td>Tokopedia</td>
-                                                                    <td>Meeting</td>
+                                                                    <td>5 Oktober 2021</td>
+                                                                    <td>Disposisikan</td>
                                                                     <td><a href=form-edit-surat-masuk.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
@@ -295,9 +295,9 @@
                                                                     <td>3</td>
                                                                     <td>SR-123</td>
                                                                     <td>4 Oktober 2021</td>
-                                                                    <td>7 Oktober 2021</td>
                                                                     <td>Lazada</td>
-                                                                    <td>Meeting</td>
+                                                                    <td>-</td>
+                                                                    <td>-</td>
                                                                     <td><a href=form-edit-surat-masuk.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
@@ -310,9 +310,9 @@
                                                                     <td>4</td>
                                                                     <td>SR-124</td>
                                                                     <td>4 Oktober 2021</td>
-                                                                    <td>8 Oktober 2021</td>
                                                                     <td>Shopee</td>
-                                                                    <td>Meeting</td>
+                                                                    <td>-</td>
+                                                                    <td>-</td>
                                                                     <td><a href=form-edit-surat-masuk.html>
                                                                         <button type="button" class="btn-primary">Edit</button></a>
                                                                         &nbsp
