--- a/resepsionis/update-profile.html
+++ b/resepsionis/update-profile.html
@@ -58,11 +58,11 @@
 
                         <li class="has_sub">
                             <a href="javascript:void(0);" class="waves-effect waves-light"><i
-                                    class="mdi mdi-file-document-box"></i><span> Data Dokumen </span><span
+                                    class="mdi mdi-file-document-box"></i><span> Data Arsip </span><span
                                     class="float-right"><i class="mdi mdi-chevron-right"></i></span></a>
                             <ul class="list-unstyled">
-                                <li><a href="jenis-dokumen.html">Jenis Data</a></li>
-                                <li><a href="data-dokumen.html">Data Dokumen</a></li>
+                                <li><a href="jenis-arsip.html">Jenis Arsip</a></li>
+                                <li><a href="data-arsip.html">Data Arsip</a></li>
                             </ul>
                         </li>
 
@@ -73,7 +73,7 @@
                             <ul class="list-unstyled">
                                 <li><a href="surat-masuk.html">Surat Masuk</a></li>
                                 <li><a href="surat-keluar.html">Surat Keluar</a></li>
-                                <li><a href="disposisi.html">Disposisi</a></li>
+                                <!-- <li><a href="disposisi.html">Disposisi</a></li> -->
                             </ul>
                         </li>
 
